[package]
name = "rshuffle"
description = "A dead simple MPD shuffler written in pure Rust."
authors = ["Campbell M. Cole <pslightjs@gmail.com>"]
categories = [
    "command-line-utilities",
    "multimedia::audio",
    "network-programming",
]
homepage = "https://github.com/campbellcole/rshuffle"
repository = "https://github.com/campbellcole/rshuffle"
license = "MIT OR Apache-2.0"
version = "0.4.0"
edition = "2021"
exclude = ["flake.nix", "flake.lock", ".envrc", "rust-toolchain.toml"]
rust-version = "1.70.0"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
color-eyre = "0.6.2"
mpd = { git = "https://github.com/campbellcole/rust-mpd", branch = "main" }
rand = { version = "0.8.5", features = [
    "std",
    "std_rng",
], default-features = false }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
mimalloc = "0.1.39"
dirs = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[features]
default = []
nightly = ["rand/nightly"]

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
