[package]
name = "rshuffle"
description = "A dead simple MPD shuffler"
authors = ["Campbell M. Cole <pslightjs@gmail.com>"]
categories = [
    "command-line-utilities",
    "multimedia::audio",
    "network-programming",
]
keywords = ["mpd", "shuffler"]
homepage = "https://github.com/campbellcole/rshuffle"
repository = "https://github.com/campbellcole/rshuffle"
license = "MIT OR Apache-2.0"
version = "0.5.1"
edition = "2021"
exclude = ["flake.nix", "flake.lock", ".envrc", "rust-toolchain.toml"]
rust-version = "1.74.1"

[dependencies]
tokio = { version = "1.40.0", features = [
    "net",
    "time",
    "sync",
    "macros",
    "rt-multi-thread",
    "fs",
] }
clap = { version = "4.4.6", features = ["derive"] }
color-eyre = "0.6.2"
rand = { version = "0.8.5", features = [
    "std",
    "std_rng",
], default-features = false }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
mimalloc = "0.1.39"
dirs = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
mpd_client = "1.4.1"
async-recursion = "1.1.1"
clap_complete_command = "0.6.1"

[features]
default = []

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
